2008-01-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/SameSurnames.py (run): change description to just
	surname, not entire person (bug #1595)

2008-01-15 Benny Malengier <benny.malengier@gramps-project.org>
	* man/Makefile.am: Swedish removed again so it builds again
	* removed help files of version 2.x, only wiki manual now!
	* COPYING-DOCS -> help/COPYING-DOCS : refers to old doc, moved
	* Makefile.am: removed help subdir, and COPYING-DOCS
	The idea should be that should we add documentation again, it is done
	in the help dir with separate source packages too for translations

2008-01-15  Peter Landgren <peter.talken@telia.com>
    * man/Makefail.am: Swedish added (sv).
    * man/gramps.1.in: typo changed (sv).
    * man/sv/gramps.1.in: tried to add Swedish man page (sv).
    but failed. How do I create man/sv in the svn repository?

2008-01-15  Benny Malengier <benny.malengier@gramps-project.org>
	* src/gen/db/exceptions.py: wrong exception def, bug #1593
	* src/GrampsDbUtils/_WriteXML.py: correctly catch the exception
	* src/GrampsDbUtils/_GrampsDbWriteXML.py: remove double def of xml export
	* src/GrampsDbUtils/_GrampsDbWRFactories.py: remove write backend factory
	* src/ExportAssistant.py: on fail, do not set success = True
	* src/GrampsDbUtils/__init__.py: don't export unused stuff

2008-01-15  Benny Malengier <benny.malengier@gramps-project.org>
	* src/ArgHandler.py: on autoload, do some extra checks first.

2008-01-15  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/GrampsDbUtils/_GrampsDbWriteXML.py
    * src/GrampsDbUtils/_WriteGedcom.py
    * src/plugins/ExportCSV.py
    * src/plugins/ExportVCalendar.py
    * src/plugins/ExportVCard.py
    * src/plugins/WriteCD.py
    * src/plugins/WriteFtree.py
    * src/plugins/WriteGeneWeb.py
    * src/plugins/WritePkg.py
    * src/PluginUtils/_PluginMgr.py: pylint fixes
    pylint fixes and work on 0001597 
    
2008-01-14  Raphael Ackermann <raphael.ackermann@gmail.com>